<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#E1D5E6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:orientation="vertical"
        >

        <Spinner
            android:id="@+id/dificulitySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:entries="@array/dificulity"/>

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_generate_button_to_get_a_question"
            android:textSize="30sp"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textViewTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="10"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="40dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnStart"
                style="@style/buttons"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/generate" />

            <Button
                android:id="@+id/btnStop"
                style="@style/buttons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stop" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/write_your_answer"
           android:tag="Enter Result"
            android:layout_weight="0.1"/>

        <Button
            android:id="@+id/btnResult"
            style="@style/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/check_result" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                style="@style/buttons"
                />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                style="@style/buttons"/>

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                style="@style/buttons"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"
                style="@style/buttons"/>

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                style="@style/buttons"/>

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6"
                style="@style/buttons"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7"
                style="@style/buttons"/>

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8"
                style="@style/buttons"/>

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9"
                style="@style/buttons"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                style="@style/buttons"/>

            <Button
                android:id="@+id/btnPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="."
                style="@style/buttons"/>

            <Button
                android:id="@+id/btnNegative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                style="@style/buttons"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                style="@style/buttons"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnShowAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/statistics"
                style="@style/buttons"
                />

            <Button
                android:id="@+id/btnQuit"
                style="@style/buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quit"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical"></LinearLayout>
</LinearLayout>